test/e2e/chainsaw/httproute-label/assertions/httproute-no-label.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-label-basic
  namespace: default
  (contains(keys(labels || `{}`), 'rollouts.argoproj.io/gatewayapi-canary')): false
