test/e2e/chainsaw/httproute-label/assertions/rollout-healthy.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: httproute-label
  namespace: default
status:
  (phase == 'Healthy'): true
